--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <section id="features">
         <div class="container">
           <div class="row features__row">
-            <h2 class="features__title">Do better wit company</h2>
+            <h2 class="features__title">Do better with company</h2>
             <p class="features__para">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
               consectetur vitae omnis cupiditate aperiam beatae voluptate
